# VoxelEngine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
docs/: API_REFERENCE.md  ARCHITECTURE.md
engine/: CMakeLists.txt
engine/include/: Application.h  Block.h  Buffer.h  Camera.h  Event.h  Player.h  Renderer.h  Scene.h  Shader.h  ShadowMap.h  ShapeUI.h  Texture.h  Texture2D.h  UIBlockDisplay.h  Utils.h  VertexArray.h  Window.h  World.h
engine/shaders/light/: light.vert
engine/shaders/outline/: outline.frag  outline.vert
engine/shaders/shadow/: shadow.frag  shadow.vert
engine/shaders/text/: text.frag
engine/shaders/ui/: ui.frag  ui.vert
engine/src/: Application.cpp  Block.cpp  Buffer.cpp  Camera.cpp  Event.cpp  Player.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  ShadowMap.cpp  ShapeUI.cpp  Texture.cpp  Texture2D.cpp  UIBlockDisplay.cpp  Utils.cpp  VertexArray.cpp  Window.cpp  World.cpp
sandbox/: CMakeLists.txt  main.cpp
sandbox/include/: Game.h  MainMenu.h  Sandbox.h
sandbox/src/: Game.cpp  MainMenu.cpp  Sandbox.cpp
